[package]
name = "parse-cve"
version = "0.1.0"
authors = ["Alexander Kjäll <alexander.kjall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.0"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde = "1.0.123"