[package]
name = "parse-cve"
version = "0.1.0"
authors = ["Alexander Kjäll <alexander.kjall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.0", features = [ "blocking" ] }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde = "1.0.123"
clap = "3.0.0-beta.2"
config = "0.10.1"
postgres = { version="0.19.0", features = [ "with-chrono-0_4", "with-serde_json-1" ] }
chrono = "0.4.19"